# cartences

./: .gitignore  Cargo.toml  README.md  create.sql  user.sql
.github/workflows/: rust.yml
src/: main.rs
src/auth/: handlers.rs  jwt.rs  jwtcfg.rs  mod.rs  role.rs
src/database/: connection.rs  mod.rs
src/models/: mod.rs  newsentences.rs  sentence.rs
src/router/: cartences.rs  create.rs  jwt.rs  mod.rs
