[package]
name = "cartences"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
config = "0.13"
bcrypt = "0.13"
futures = "0.3"
env_logger = "0.9"
jsonwebtoken = "8.1"
warp = "0.3"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "macros", "mysql", "chrono"] }
